# bugspray

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang.yml  cmake.yml  gcc.yml  msvc.yml
cmake/: bs_configure_version_header.cmake  bs_import_lib_for_testing.cmake  bs_target_setup.cmake  bs_test_add_imported_bs_lib.cmake
doc/: asserting-functions.md  assertions.md  build-configuration.md  captures.md  compatibility.md  evaluation-order.md  limitations.md  runtime-evaluation.md  sections.md  stringification.md  test-cases.md  utilities.md
include/bugspray/: bugspray.hpp  function_templates.hpp  section_tracker.hpp  test_case_registry.hpp  test_macros.hpp  test_macros_impl.hpp  test_run.hpp  test_runner.hpp  test_tags_t.hpp  version.hpp.in
include/bugspray/cli/: argument_destination.hpp  argument_parser.hpp  main_test_runner_argparser.hpp  main_test_runner_config.hpp  parameter.hpp  parameter_names.hpp
include/bugspray/cli/parsers/: arg_parser.hpp  parse_bool.hpp  parse_integral.hpp  parse_string_view.hpp
include/bugspray/cli_parser/: argument_parser.hpp  cli_parser.hpp  named_argument.hpp  positional_argument.hpp  test_case_selector.hpp
include/bugspray/macro_interface/: asserting_function_macros.hpp  assertion_macros.hpp  capture_macro.hpp  section_macro.hpp  test_case_macros.hpp
include/bugspray/reporter/: caching_reporter.hpp  constexpr_reporter.hpp  formatted_ostream_reporter.hpp  noop_reporter.hpp  reporter.hpp  terminal_reporter.hpp  xml_reporter.hpp
include/bugspray/reporter/detail/: runtime_stopwatch.hpp
include/bugspray/test_evaluation/: evaluate_test_case.hpp  evaluate_test_case_target.hpp  info_capture.hpp  parse_tag_string.hpp  section_path.hpp  section_tracker.hpp  test_case.hpp  test_case_filter.hpp  test_case_fn.hpp  test_case_topology.hpp  test_run_data.hpp
include/bugspray/test_evaluation/decomposition/: binary_expr.hpp  decomposer.hpp  decomposition_result.hpp  unary_expr.hpp
include/bugspray/test_registration/: test_case_registry.hpp
include/bugspray/to_string/: char_to_printable_string.hpp  stringify.hpp  to_string_bool.hpp  to_string_byte.hpp  to_string_char.hpp  to_string_container.hpp  to_string_floating_point.hpp  to_string_integral.hpp  to_string_optional.hpp  to_string_pair.hpp  to_string_pointer.hpp  to_string_string_like.hpp  to_string_tag.hpp  to_string_tuple.hpp  to_string_variant.hpp
include/bugspray/utility/: c_array.hpp  character.hpp  compile_error.hpp  compiletime_string.hpp  dependent_false.hpp  isspace.hpp  macros.hpp  naive_string.hpp  naive_vector.hpp  source_location.hpp  static_for.hpp  static_for_each_type.hpp  string.hpp  string_literal.hpp  stringify_typename.hpp  structural_string.hpp  structural_tuple.hpp  trim.hpp  vector.hpp  warning_suppression.hpp  xml_writer.hpp
include/bugspray/utility/detail/: naive_string.hpp  naive_vector.hpp  structural_tuple_impl.hpp
include/bugspray/utility/macros/: concatenate.hpp  (+16 more)
src/: main.cpp  test_case_registry.cpp
src/reporter/: formatted_ostream_reporter.cpp  terminal_reporter.cpp  xml_reporter.cpp
src/reporter/detail/: runtime_stopwatch.cpp
src/utility/: xml_writer.cpp
test/: CMakeLists.txt  test.cpp  test2.cpp
test/catch2-compatibility-tests/: CMakeLists.txt  compare_xml_output.py  test_catch_compatibility.cpp.in
test/compile-fail-tests/: CMakeLists.txt
test/compile-fail-tests/00-fail-trivial/: CMakeLists.txt  main.cpp
test/compile-fail-tests/01-invalid-tags/: CMakeLists.txt  main.cpp.in
test/compile-fail-tests/01-invalid-tags/both-testcase/: CMakeLists.txt  main.cpp
test/compile-fail-tests/01-invalid-tags/runtime-testcase/: CMakeLists.txt  main.cpp
test/compile-failure-tests/: 00-test_case_failure.cpp  CMakeLists.txt
test/compile-failure-tests/01-fibonacci/: CMakeLists.txt  test.cpp
test/compile-failure-tests/02-invalid-tag-string/: test.cpp
test/examples/: 00-trivial.cpp  01-sections.cpp  02-section-independence.cpp  03-sections-in-loops.cpp  04-partially-constexpr-type.cpp  05-exceptions.cpp  06-testing-templates.cpp  07-calling-asserting-functions.cpp  CMakeLists.txt
test/failing-examples/01-fibonacci/: CMakeLists.txt
test/failing-examples/03-utf8-codeunit-categorization/: CMakeLists.txt  test.cpp
test/failing-examples/04-undefined-behavior/: test.cpp
test/success-tests/: CMakeLists.txt  empty_both.cpp  empty_runtime.cpp  section_both.cpp  section_runtime.cpp  with_assertions_both.cpp  with_assertions_runtime.cpp
test/success-tests/00-basic/: CMakeLists.txt  main.cpp
test/unit_tests/: CMakeLists.txt
test/unit_tests/cli/: test_argument_destination.cpp  test_argument_parser.cpp  test_parameter_names.cpp
test/unit_tests/reporter/: test_caching_reporter.cpp
test/unit_tests/test_evaluation/: test_evaluate_test_case.cpp  test_evaluate_test_case_asserting_function.cpp  test_evaluate_test_case_basic.cpp  test_evaluate_test_case_section_constraints.cpp  test_evaluate_test_case_target.cpp  test_evaluate_test_case_with_loops.cpp  test_info_capture.cpp  test_parse_tag_string.cpp  test_test_case_filter.cpp  test_test_case_topology.cpp  test_test_run_data.cpp
test/unit_tests/test_evaluation/decomposition/: test_decomposer.cpp
test/unit_tests/to_string/: test_char_to_printable_string.cpp  test_stringify.cpp  test_to_string_bool.cpp  test_to_string_byte.cpp  test_to_string_char.cpp  test_to_string_container.cpp  test_to_string_floating_point.cpp  test_to_string_integral.cpp  test_to_string_optional.cpp  test_to_string_pair.cpp  test_to_string_pointer.cpp  test_to_string_string_like.cpp  test_to_string_tuple.cpp  test_to_string_variant.cpp
test/unit_tests/utility/: test_compiletime_string.cpp  test_source_location.cpp  test_static_for_each_type.cpp  test_stringify_typename.cpp  test_structural_string.cpp  test_structural_tuple.cpp
test/unit_tests/utility/detail/: test_naive_string.cpp  test_naive_vector.cpp
test/unit_tests/utility/macros/: test_get_nth_arg.cpp  test_get_nth_arg_or.cpp  test_get_tail.cpp  test_unique_identifier.cpp  test_unwrap.cpp
